--- a/pro/templates/default.html
+++ b/pro/templates/default.html
@@ -1,41 +1,68 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8"> 
-	<title>Bootstrap 实例 - 条纹表格</title>
-	<link rel="stylesheet" href="/static/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css">  
-	<script src="/static/jquery/jquery-3.1.1.min.js"></script>
-	<script src="/static/bootstrap/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-</head>
-<body>
-	<div class="container">
-	<table class="table table-striped table-hover">
-		<caption>条纹表格布局</caption>
-		<thead>
-			<tr>
-				<th>名称</th>
-				<th>城市</th>
-				<th>邮编</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Tanmay</td>
-				<td>Bangalore</td>
-				<td>560001</td>
-			</tr>
-			<tr>
-				<td>Sachin</td>
-				<td>Mumbai</td>
-				<td>400003</td>
-			</tr>
-			<tr>
-				<td>Uma</td>
-				<td>Pune</td>
-				<td>411027</td>
-			</tr>
-		</tbody>
-	</table>
+{% extends "layout.html" %}
+{% block topad %}
+	<div class="container btn-danger" style="margin-top:0px;">
+		<img src="static/img/top.png">
 	</div>
-	</body>
-</html>
+{% endblock %}
+{% block search %}
+<div class="container search">
+	<div class="row">
+		<div class="col-md-2">
+			<a href="#"><img class="search-width" src="/static/img/logo-o.png" alt="通用的占位符缩略图"></a>
+		</div>
+		<div class="col-md-2">
+			<a href="#"><img class="search-width" src="/static/img/logo-o.png" alt="通用的占位符缩略图"></a>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-10">
+					<label><input type="text" placeholder="Name"></label>
+					<label>
+						<span>充话费</span>
+						<span>租房</span>
+						<span>合租</span>
+						<span>电瓶车</span>
+						<span>销售急聘</span>
+						<span>洗车故障</span>
+						<span>装修公司</span>
+						<span>同城租车</span>
+					</label>
+				</div>
+				<div class="col-md-2">
+					<lable><button type="button" class="button">搜索</button></label>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-2">
+			<button type="button" class="button alert">&nbsp;&nbsp;&nbsp;免费发布信息&nbsp;&nbsp;&nbsp;</button>
+		</div>
+	</div>
+</div>
+{% endblock %}
+
+{% block midnav %}
+<div class="container">
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#"><p class="text-danger">首页</p></a></li>
+		<li class="dropdown">
+		<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+			&nbsp;&nbsp;58APP&nbsp;&nbsp; <span class="caret"></span>
+		</a>
+		<ul class="dropdown-menu">
+			<li><a href="#">Swing</a></li>
+			<li><a href="#">jMeter</a></li>
+			<li><a href="#">EJB</a></li>
+			<li class="divider"></li>
+			<li><a href="#">分离的链接</a></li>
+		</ul>
+		</li>
+		<li><a href="#">PHP</a></li>
+	</ul>
+</div>
+{% endblock %}
+{% block jsb %}
+<script>
+$(function() {$(".dropdown-toggle").dropdown('toggle');});
+$(document).ready(function() {$(document).foundation();})
+</script>
+{% endblock %}
