--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -158,6 +158,7 @@
 	{% block topad %}{% endblock %}
 	{% block search %}{% endblock %}
 	{% block midnav %}{% endblock %}
+	{% block mainlink %}{% endblock %}
 	{% block jsb %}{% endblock %}
 </div>
 </body>
