--- a/pro/templates/default.html
+++ b/pro/templates/default.html
@@ -95,17 +95,82 @@
 {% endblock %}
 {% block mainlink %}
 <div class="container">
-	<div class="row">
-		<div class="col-md-1" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">第一部分</div>
-		<div class="col-md-1" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">第2部分</div>
-		<div class="col-md-1" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">第3部分</div>
-		<div class="col-md-1" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">第4部分</div>
-		<div class="col-md-1" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">第5部分</div>
-		<div class="col-md-1" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">第6部分</div>
-		<div class="col-md-1" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">第7部分</div>
-		<div class="col-md-5" style="background-color: #dedef8;box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-			我在右边
+	<div class="row total-eigth">
+		<div class="col-md-1 eigth-div">
+			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
+			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">招聘</a></div>
+			<div>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">全职</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">兼职</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">简历</a>
+			</div>
 		</div>
+
+		<div class="col-md-1 eigth-div">
+			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
+			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">房产</a></div>
+			<div>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">租房</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">二手房</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">公寓</a>
+			</div>
+		</div>
+
+		<div class="col-md-1 eigth-div">
+			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
+			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">二手车</a></div>
+			<div>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">3万内</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">suv</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">货车</a>
+			</div>
+		</div>
+
+		<div class="col-md-1 eigth-div">
+			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
+			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">二手市场</a></div>
+			<div>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">手机</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">设备</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">回收</a>
+			</div>
+		</div>
+
+
+		<div class="col-md-1 eigth-div">
+			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
+			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">宠物</a></div>
+			<div>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">狗</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">猫</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">鱼</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">用品</a>
+			</div>
+		</div>
+
+
+		<div class="col-md-1 eigth-div">
+			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
+			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">本地商务</a></div>
+			<div>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">工商</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">租赁</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">开店</a>
+			</div>
+		</div>
+
+
+		<div class="col-md-1 eigth-div">
+			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
+			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">本地服务</a></div>
+			<div>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">搬家</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">教育</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">车服务</a>
+			</div>
+		</div>
+
+		<div class="col-md-5 eigth-div">我在右边</div>
 	</div>
 </div>
 {% endblock%}
