--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -18,8 +18,8 @@
 	<link rel="icon" href="/static/ico/favicon.ico">
 	<link rel="bookmark"  type="image/x-icon"  href="/static/ico/favicon.ico"/>
 </head>
-<body>
-<div class="container">
+<body class="all-all">
+<div class="container div-all">
 	<nav class="navbar navbar-default" style="margin:0" role="navigation">
 		<div class="container-fluid"> 
 			<div class="navbar-header">
