--- a/pro/templates/default.html
+++ b/pro/templates/default.html
@@ -148,7 +148,6 @@
 			</div>
 		</div>
 
-
 		<div class="col-md-1 eigth-div">
 			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
 			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">本地商务</a></div>
@@ -158,22 +157,114 @@
 				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">开店</a>
 			</div>
 		</div>
-
-
 		<div class="col-md-1 eigth-div">
 			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
-			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">本地服务</a></div>
+			<div><a class="eigth-font-top" href="https://www.baidu.com/" class="">本地商务</a></div>
 			<div>
-				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">搬家</a>
-				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">教育</a>
-				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">车服务</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">工商</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">租赁</a>
+				<a class="eigth-font-bot" href="https://www.baidu.com/" class="">开店</a>
 			</div>
 		</div>
-
-		<div class="col-md-5 eigth-div">我在右边</div>
+		<div class="col-md-5">
+			<div id="myCarousel" class="carousel slide">
+				<!-- 轮播（Carousel）指标 -->
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+				</ol>   
+				<!-- 轮播（Carousel）项目 -->
+				<div class="carousel-inner">
+					<div class="item active">
+						<ul class="list-group ">
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img  class="img-rounded" src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img  class="img-rounded" src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img  class="img-rounded" src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img class="img-rounded" src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img class="img-rounded" src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+						</ul>
+					</div>
+					<div class="item">
+						<ul class="list-group ">
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img class="img-rounded" src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img class="img-rounded" src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img class="img-rounded" src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+							<li class="list-group-item eigth-five-child">
+								<div>
+									<a href="https://www.baidu.com/"><img src="/static/img/581.jpg" alt="Second slide">保洁</a>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<!-- 轮播（Carousel）导航 -->
+				<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+				<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+			</div>
+		</div>
 	</div>
 </div>
-{% endblock%}
+{% endblock %}
+
+{% block bodylink %}
+<div class="container">
+	<div class="row">
+		<div class="body-frist-div" style="float:left;width:20%;background-color: #dedef8;box-shadow: 
+			inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+			<div>
+				 <a><h4>杭州房产</h4></a>
+			</div>
+		 </div>
+		 <div class="body-frist-div" style="float:left;width:20%;background-color: #dedef8;box-shadow: 
+			 inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+			 <div>	
+				 <a><h4>杭州房产</h4></a>
+			 </div>
+		 </div>
+		 <div class="body-frist-div" style="float:left;width:28%;background-color: #dedef8;box-shadow: 
+			 inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+			 <h4>第三列 - 分为四个盒子</h4>
+		 </div>
+		 <div class="body-frist-div" style="float:left;width:28%;background-color: #dedef8;box-shadow: 
+			 inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+			 <h4>第四列 - 分为四个盒子</h4>
+		 </div>
+	 </div>
+ </div>
+ {% endblock %}
+
 {% block jsb %}
 <script>
 $(function() {$(".dropdown-toggle").dropdown('toggle');});
