--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -159,6 +159,7 @@
 	{% block search %}{% endblock %}
 	{% block midnav %}{% endblock %}
 	{% block mainlink %}{% endblock %}
+	{% block bodylink %}{% endblock %}
 	{% block jsb %}{% endblock %}
 </div>
 </body>
