--- a/pro/static/css/bounty.css
+++ b/pro/static/css/bounty.css
@@ -71,3 +71,24 @@ drop-tbr
 	margin:0px;
 	border: 3px solid red;
 }
+.cont-main-text
+{
+	font-weight:900;
+	text-align:left;
+	color:orange;
+	font-size:14px;
+}
+.cont-sed-text
+{
+	font-weight:300;
+	text-align:left;
+	color:orange;
+	font-size:11px;
+}
+.cont-thd-text
+{
+	font-weight:300;
+	text-align:left;
+	color:orange;
+	font-size:10px;
+}
