增加默认网页二到四列的内容

--- a/pro/static/css/bounty.css
+++ b/pro/static/css/bounty.css
@@ -92,3 +92,10 @@ drop-tbr
 	color:orange;
 	font-size:10px;
 }
+.cont-fourth-text
+{
+	font-weight:300;
+	text-align:left;
+	color:black;
+	font-size:11px;
+}
